# rlhf-from-scratch

./: .gitignore  README.md  pyproject.toml
docs/: autodl_guide.md
grpo/: README.md  countdown_task.py  data_types.py  eval.py  grpo.py  qwen2_model.py  tokenizer.py  train.py
instructgpt/: README.md  ppo.py  reward_model.py  sft.py
model_notes/: README.md  gpt_2.py  qwen_3.py
